--- a/client/index.html
+++ b/client/index.html
@@ -15,15 +15,15 @@
 <div id="myCtrl" data-ng-controller="myCtrl as settings">{{whoami}}</div>
 
 <!-- Lib -->
-<script sry="./javascripts/lib/angular.min.js"></script>
-<script sry="./javascripts/lib/angular-route.min.js"></script>
-<script sry="./javascripts/lib/angular-resource.min.js"></script>
+<script src ="./javascripts/lib/angular.min.js"></script>
+<script src ="./javascripts/lib/angular-route.min.js"></script>
+<script src ="./javascripts/lib/angular-resource.min.js"></script>
 
 
 <!-- App -->
-<script sry="./javascripts/app.js"></script>
-<script sry="./javascripts/controllers.js"></script>
-<script sry="./javascripts/services.js"></script>
+<script src ="./javascripts/app.js"></script>
+<script src ="./javascripts/controllers.js"></script>
+<script src ="./javascripts/services.js"></script>
 
 
 </body>
